--- a/php/styles.css
+++ b/php/styles.css
@@ -13,26 +13,26 @@ body {
 }
 section.congratulations {
     display: block;
-    padding: 50px;
-    text-align: right;
-    position: absolute;
+    padding: 20px 10px 10px 10px;
+    text-align: center;
+    /* position: absolute; */
     top: 0;
-    left: 0;
-    right: 50%;
+    left: 0; 
+    right: 0;
     bottom: 0;
-    border-right: 6px solid #ace;
+    /* border-right: 6px solid #ace; */
     background-color: #79b;
-    background-image: -webkit-gradient(linear, left top, right top, from(#79b), to(#79b));
-    background-image: -webkit-linear-gradient(left, #9bd, #79b);
-    background-image: -moz-linear-gradient(left, #9bd, #79b);
-    background-image: -ms-linear-gradient(left, #9bd, #79b);
-    background-image: -o-linear-gradient(left, #9bd, #79b);
-    background-image: linear-gradient(left, #9bd, #79b);
+    background-image: -webkit-gradient(linear, left top, right top, from(#0b1d30), to(#2E0E4E));
+    background-image: -webkit-linear-gradient(left, #9bd, #2E0E4E);
+    background-image: -moz-linear-gradient(left, #9bd, #2E0E4E);
+    background-image: -ms-linear-gradient(left, #9bd, #2E0E4E);
+    background-image: -o-linear-gradient(left, #9bd, #2E0E4E);
+    background-image: linear-gradient(left, #9bd, #2E0E4E); 
     filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#99bbdd', EndColorStr='#7799bb');
 }
 section.congratulations h1 {
     margin: 0 0 25px 0;
-    padding: 0;
+    padding: 10px 0 0 0;
     color: #fff;
     font-family: 'Lobster Two', cursive;
     font-size: 4.5em;
@@ -47,7 +47,7 @@ section.congratulations p {
     font-size: 1.25em;
     color: #fff;
     line-height: 1.5em;
-    margin: 0 0 25px 0;
+    margin: 0 10px 25px 10px;
 }
 section.congratulations a, section.congratulations a:link, section.congratulations a:visited {
     color: white;
@@ -59,14 +59,14 @@ section.congratulations aside {
     font-size: 0.875em;
     font-style: italic;
 }
-section.instructions {
+/* section.instructions {
     display: block;
     padding: 50px;
     text-align: left;
     background-color: #fff;
     position: absolute;
     top: 0;
-    left: 50%;
+    left: 0;
     right: 0;
     bottom: 0;
 }
@@ -102,11 +102,11 @@ section.instructions a:visited {
 }
 section.instructions a:hover {
     color: #f90;
-}
+} */
 
 @media only screen and (max-width: 1024px) {
     section.congratulations h1 {
-        font-size: 4em;
+        font-size: 6em;
     }
 }
 @media only screen and (max-width: 900px) {
@@ -126,14 +126,15 @@ section.instructions a:hover {
     }
     section.congratulations, section.instructions {
         position: relative;
-        margin:; 0;
+        margin: 0;
         border: 0;
-        padding: 10px;
-        width: 100%;
+        /* padding: 0;
+        width: 100%; */
         top: auto;
         left: auto;
         right: auto;
         bottom: auto;
-        border-bottom: 6px solid #ace;
+        /* border-bottom: 6px solid #ace; */
         text-align: left;
     }
+}
